--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,14 @@
     <string name="addExhibit_validation_image">Zadajte obrázok exponátu.</string>
     <string name="addExhibit_saved">Exponát uloŽený.</string>
 
+    <!--fragment_exhibit-->
+    <string name="fragment_exhibit_image">Obrázok exponátu</string>
+    <string name="fragment_exhibit_row_title">Exponát</string>
+    <string name="fragment_exhibit_row_about">Popis</string>
+    <string name="fragment_exhibit_info">Približná zdialenosť od vás: X m</string>
+
+
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
